--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -47,6 +47,7 @@
 
 // Views
 @import "views/app.scss";
+@import "views/_app-guide.scss";
 @import "views/_home.scss";
 @import "views/_lesson-details.scss";
 @import "views/_login.scss";
