add favicon. delete unecessary img. form bux fix

--- a/frontend/src/styles/components/_users-list.scss
+++ b/frontend/src/styles/components/_users-list.scss
@@ -6,6 +6,7 @@
     height: 400px;
   }
   .swiper-slide {
+    // margin: 5px;
     background-position: center;
     background-size: cover;
     width: 200px;
