--- a/frontend/src/styles/components/_home-hero.scss
+++ b/frontend/src/styles/components/_home-hero.scss
@@ -64,7 +64,7 @@
   }
 }
 
-@media screen and (max-width: rem(768px)) {
+@media screen and (max-width: rem(780px)) {
   .header-hero {
     .header-container {
       background-image: url("../assets/images/trainer-mobile-bg-xs.jpg");
@@ -80,16 +80,15 @@
         align-items: center;
         justify-content: flex-end;
         position: relative;
-        bottom: rem(60px);
+        bottom: 8.75rem;
         .mobile-txt {
-          height: 47%;
+          height: 30%;
           display: flex;
           flex-direction: column;
           justify-content: space-between;
         }
         .header-txt {
           font-size: rem(20px);
-          background-color: transparent;
         }
         .sub-header-txt {
           font-size: rem(18px);
@@ -109,8 +108,9 @@
       justify-content: center;
       .left-container {
         width: 100%;
+        bottom: 3rem;
         .mobile-txt {
-          height: 30%;
+          height: 35%;
           justify-content: start;
           align-items: center;
         }
@@ -128,7 +128,7 @@
   }
 }
 
-@media screen and (max-width: rem(310px)) {
+@media screen and (max-width: rem(320px)) {
   .header-hero {
     .header-container {
       justify-content: center;
@@ -136,6 +136,7 @@
       background-position: top;
       .left-container {
         height: 100%;
+        bottom: 5rem;
         .header-txt {
           font-size: 1rem;
         }
