--- a/frontend/src/styles/components/_type-filter.scss
+++ b/frontend/src/styles/components/_type-filter.scss
@@ -25,9 +25,12 @@
 
 @media screen and (max-width: 960px) {
   .body-mobile-view {
-    display: block;
+    display: flex;
+    width: 100%;
+    justify-content: center;
   }
   .filter {
-    margin-top: 20px;
+    margin-bottom: 0;
+    padding: 0;
   }
 }
