home hero font change and spelling fix

--- a/frontend/src/styles/basics/_typography.scss
+++ b/frontend/src/styles/basics/_typography.scss
@@ -30,3 +30,15 @@
   src: url("../assets/fonts/PetitFormal/PetitFormalScript-Regular.ttf");
   font-family: "Petit-formal";
 }
+@font-face {
+  src: url("../assets/fonts/Tangerine/Tangerine-Bold.ttf");
+  font-family: "Tangerine-Bold";
+}
+@font-face {
+  src: url("../assets/fonts/Parisienne/Parisienne-Regular.ttf");
+  font-family: "Parisienne-Regular";
+}
+@font-face {
+  src: url("../assets/fonts/Dancing_Script/DancingScript-Regular.ttf");
+  font-family: "DancingScript-Regular";
+}
