--- a/frontend/src/styles/components/_home-hero.scss
+++ b/frontend/src/styles/components/_home-hero.scss
@@ -16,7 +16,8 @@
     font-family: "lato-bold";
     font-size: rem(30px);
     h3 {
-      font-family: "Petit-formal";
+      font-family: "Tangerine-Bold";
+      font-size: rem(50px);
     }
   }
   .sub-header-txt {
