hero scroll btn remove height

--- a/frontend/src/styles/components/_home-hero.scss
+++ b/frontend/src/styles/components/_home-hero.scss
@@ -32,7 +32,7 @@
       background-color: transparent;
       border: none;
       font-weight: bolder;
-      height: rem(40px);
+      // height: rem(40px);
     }
   }
 
