--- a/frontend/src/styles/components/_type-filter.scss
+++ b/frontend/src/styles/components/_type-filter.scss
@@ -1,7 +1,7 @@
 .filter {
   margin-bottom: 10px;
   padding: 0 2px 4px 37px;
-
+  background-color: white !important;
   .md-field {
     margin: 0;
   }
