--- a/frontend/src/styles/basics/_helpers.scss
+++ b/frontend/src/styles/basics/_helpers.scss
@@ -99,6 +99,8 @@
 .list-item {
   margin: 10px;
   padding: 10px;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
   a {
     color: $clr1 !important;
     display: inline-block;
@@ -108,6 +110,8 @@
   }
   &:hover {
     color: black !important;
-    background-color: #96969659;
+    // background-color: #96969659;
+    border-top: 2px solid whitesmoke;
+    border-bottom: 2px solid whitesmoke;
   }
 }
