--- a/frontend/src/styles/components/_lesson-preview.scss
+++ b/frontend/src/styles/components/_lesson-preview.scss
@@ -5,6 +5,7 @@
     height: 100px !important;
     border-radius: 5px;
     margin-right: 5px;
+    object-fit: cover;
   }
 
   .red {
@@ -18,7 +19,12 @@
     font-weight: bold;
     color: red;
   }
+  .md-list-item {
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+  }
   .md-list-item:hover {
-    background-color: #e6e4e4;
+    border-top: 2px solid whitesmoke;
+    border-bottom: 2px solid whitesmoke;
   }
 }
