--- a/frontend/src/styles/views/_lesson-details.scss
+++ b/frontend/src/styles/views/_lesson-details.scss
@@ -18,8 +18,10 @@
 
     img {
       width: 280px;
-      height: auto;
-      object-fit: cover;
+      height: 280px;
+      object-fit: fill;
+      border-radius: 5px;
+      opacity: 0.9;
     }
   }
 
@@ -121,7 +123,13 @@
 
 @media screen and (max-width: rem(564px)) {
   .lesson-details {
-    .lesson-img-container,
+    .lesson-img-container {
+      width: 100%;
+      img {
+        max-width: 180px;
+        max-height: 180px;
+      }
+    }
     .lesson-container {
       width: 100%;
     }
