map working! users page working!

--- a/frontend/src/styles/components/_user-calendar.scss
+++ b/frontend/src/styles/components/_user-calendar.scss
@@ -2,7 +2,9 @@
   cursor: pointer;
   height: 80vh;
 }
-
+.md-content.md-scrollbar.md-theme-default {
+  border-radius: 30px;
+}
 .vuecal {
   border-radius: 20px;
 }
