--- a/frontend/src/styles/views/_lesson-details.scss
+++ b/frontend/src/styles/views/_lesson-details.scss
@@ -17,10 +17,10 @@
     background-position: top;
 
     img {
-      width: 280px;
-      height: 280px;
+      width: 200px;
+      height: 200px;
       object-fit: fill;
-      border-radius: 5px;
+      border-radius: 50%;
       opacity: 0.9;
     }
   }
